@@ -57,7 +57,7 @@ public class NameNodeAdapter {
   public static LocatedBlocks getBlockLocations(NameNode namenode, String src,
       long offset, long length) throws IOException {
     return namenode.getNamesystem()
-        .getBlockLocations(src, offset, length, false, true, true);
+        .getBlockLocations("foo", src, offset, length);
   }
   
   public static HdfsFileStatus getFileInfo(NameNode namenode, String src,
